Revision history for Hash::Match

{{$NEXT}}

v0.8.2    2025-01-02 21:25:39+00:00 Europe/London
  [Documentation]
  - Updated link to the security policy to refer to the git repo.

  - Fixed copyright year.

  [Tests]
  - Fixed an error with t/author-leaks.t GH#8.

v0.8.1    2025-01-01 12:58:38+00:00 Europe/London
  [Documentation]
  - Added a security policy.

  - Updated copyright year.

  [Tests]
  - Added and improved author tests.

  [Other]
  - Removed tabs from source code.

  [Toolchain]
  - Added .mailmap to repo.

  - Declared core prereqs.

  - Added signature to release.

  - Removed MANIFEST.SKIP from build.

v0.8.0    2023-06-11 14:49:27+01:00 Europe/London
  [Incompatible Changes]
  - Perl v5.14 or later is now required.

  [Enhancements]
  - Uses Ref::Util for my reference type checks.

  - Improved code encapsulation.

  - Cleaned up unnecessary code.

  [Documentation]
  - Document perl version support policy.

  - Updated copyright year.

  - Fixed encoding of links in README.

v0.7.2    2022-02-12 11:54:59+00:00 Europe/London
  [Documentation]
  - Fixed copyright year.

v0.7.1    2021-10-19 16:57:52+01:00 Europe/London
  [Documentation]
  - Fixed typo.

  [Other]
  - Add List::SomeUtils::XS to recommended prereqs.

  [Toolchain]
  - Removed use of Travis-CI.

v0.7.0    2018-10-19 17:16:55+01:00 Europe/London
  [Enhancements]
  - Uses Ref::Util for improved performance.

  [Documentation]
  - The POD is build with Pod::Weaver.

  - Added INSTALL file to the distribution.

  [Toolchain]
  - Reorganised dist.ini to improve build process.

  - Includes cpanfile for development.

  [Other]
  - Changed README to Markdown format.

  - Removed dependency on version.

v0.6.2    2017-12-08 08:49:54+00:00 Europe/London

        - Added missing test prereqs.

v0.6.1    2017-12-06 08:03:04+00:00 Europe/London

        - Added missing prereqs (Mohammad S Anwar)

        - Updated Copyright year in POD

v0.6.0    2017-12-04 17:27:59+00:00 Europe/London
