@@ -52,5 +52,6 @@ on 'develop' => sub {
   requires "Test::Pod::Coverage" => "1.08";
   requires "Test::Pod::LinkCheck" => "0";
   requires "Test::Portability::Files" => "0";
+  requires "Test::Spelling" => "0.17";
   requires "Test::TrailingSpace" => "0.0203";
 };
