@@ -72,6 +72,8 @@ x_authority    = cpan:RRWO
 ; authordep Pod::Weaver::Section::SourceGitHub
 
 [PodSyntaxTests]
+[Test::PodSpelling]
+stopword = Foxtons
 [Test::DistManifest]
 [Test::CleanNamespaces]
 [Test::EOF]
