@@ -1,6 +1,8 @@
 Revision history for Hash::Match
 
 {{$NEXT}}
+  [Tests]
+  - Improved author tests.
 
 v0.8.2    2025-01-02 21:25:39+00:00 Europe/London
   [Documentation]
